--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,9 @@ itsdangerous==2.0.1
 Jinja2==3.0.2
 MarkupSafe==2.0.1
 marshmallow==3.14.0
+marshmallow-sqlalchemy==0.26.1
 psycopg2==2.9.1
 six==1.16.0
 SQLAlchemy==1.4.26
+SQLAlchemy-Utils==0.37.9
 Werkzeug==2.0.2
